<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_0"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:padding="20dp"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_margin="150dp"
            app:srcCompat="@drawable/clicker_icon"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:contentDescription="@string/clicker_button"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="6dp">

        <Button
            android:id="@+id/home_page_shop_button"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:backgroundTint="#0016A6"
            android:text="@string/shop"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_margin="2dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/home_page_friends_button"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:backgroundTint="#0016A6"
            android:textColor="@color/white"
            android:text="@string/friends"
            android:textSize="12sp"
            android:layout_margin="2dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/home_page_leaderboard_button"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:backgroundTint="#0016A6"
            android:textColor="@color/white"
            android:text="@string/leaderboard"
            android:textSize="12sp"
            android:layout_margin="2dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/home_page_chat_button"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:backgroundTint="#0016A6"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_margin="2dp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</RelativeLayout>